# src/infrastructure/api/controllers/book/book.codec.ts
@@ -1,9 +1,0 @@
-import { BookIdDto, PostBookInputDto } from './dto';
-
-export const getBookCodec = {
-  decodeBookId: (params: unknown) => BookIdDto.safeParse(params),
-};
-
-export const createBookCodec = {
-  decode: (params: unknown) => PostBookInputDto.safeParse(params),
-};
