# src/infrastructure/api/controllers/recipe/dto/post-recipe.dto.ts
@@ -1,0 +1,14 @@
+import { z } from 'zod';
+import { RecipeOutputDto } from './recipe.dto';
+
+export const PostRecipeInputDto = z.object({
+  title: z.string().min(1),
+  summary: z.string().min(5),
+  author: z.string().min(1),
+  totalPages: z.number().min(1),
+});
+
+export type PostRecipeInputDto = ReturnType<typeof PostRecipeInputDto.parse>;
+
+export const PostRecipeOutputDto = RecipeOutputDto;
+export type PostRecipeOutputDto = ReturnType<typeof PostRecipeOutputDto.parse>;
